# LawAgent

./: README.md  app.py  requirements.txt
backend/: main.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
