[package]
name = "lawagent-desktop"
version = "0.1.0"
description = "LawAgent desktop app"
authors = ["LawAgent"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1", features = ["shell-sidecar"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
